@@ -7,6 +7,9 @@ Release 3.9.0 (?? ?????? 201?)
 
 * ==================== OTHER CHANGES ====================
 
+  - Addition of GDB server monitor command 'v.info open_fds' that gives the
+    list of open file descriptors and additional details.
+
 * ==================== FIXED BUGS ====================
 
 The following bugs have been fixed or resolved.  Note that "n-i-bz"
@@ -34,6 +37,7 @@ m = merged into 3_8_BRANCH
 307155    [390] filter_gdb should filter out syscall-template.S T_PSEUDO
 308321    [390] testsuite memcheck filter interferes with gdb_filter 
 308341    [390] vgdb should report process exit (or fatal signal)
+308644    [390] vgdb command for having the info for the track-fds option
 n-i-bz    [390] report error for vgdb snapshot requested before execution
 n-i-bz    [390] Some wrong command line options could be ignored
 
